# houdini_ramen

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  dump_nodes.py  generate_rust_api.py  list_types.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
.junie/: AGENTS.md
crates/houdini_ramen_chop/: Cargo.toml
crates/houdini_ramen_chop/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  lib.rs  m.rs  n.rs  o.rs  p.rs  r.rs  s.rs  t.rs  v.rs  w.rs
crates/houdini_ramen_chopnet/: Cargo.toml
crates/houdini_ramen_chopnet/src/: c.rs
crates/houdini_ramen_cop/: Cargo.toml
crates/houdini_ramen_cop/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  n.rs  o.rs  p.rs  q.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs  x.rs  z.rs
crates/houdini_ramen_cop2/: Cargo.toml
crates/houdini_ramen_cop2/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  l.rs  m.rs  n.rs  o.rs  p.rs  q.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs  x.rs  z.rs
crates/houdini_ramen_copnet/: Cargo.toml
crates/houdini_ramen_copnet/src/: c.rs  i.rs
crates/houdini_ramen_core/: Cargo.toml
crates/houdini_ramen_core/src/core/: graph.rs  py_escape.rs  transpiler.rs
crates/houdini_ramen_core/src/core/transpiler/: builder.rs  tests.rs
crates/houdini_ramen_core/src/core/transpiler/passes/: creation.rs  header.rs  links.rs  parameters.rs
crates/houdini_ramen_core/src/core/types/: node.rs  param.rs
crates/houdini_ramen_data/: Cargo.toml
crates/houdini_ramen_data/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  i.rs  k.rs  l.rs  lib.rs  m.rs  n.rs  o.rs  r.rs  s.rs  u.rs  v.rs  w.rs
crates/houdini_ramen_director/: Cargo.toml
crates/houdini_ramen_dop/: Cargo.toml
crates/houdini_ramen_dop/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  l.rs  m.rs  n.rs  o.rs  p.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs
crates/houdini_ramen_driver/: Cargo.toml
crates/houdini_ramen_driver/src/: a.rs  b.rs  c.rs  d.rs  f.rs  g.rs  h.rs  i.rs  k.rs  l.rs  m.rs  n.rs  o.rs  p.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs
crates/houdini_ramen_helpers/: Cargo.toml
crates/houdini_ramen_helpers/src/: lib.rs
crates/houdini_ramen_helpers/src/helpers/: loops.rs
crates/houdini_ramen_lop/: Cargo.toml
crates/houdini_ramen_lop/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  k.rs  l.rs  lib.rs  m.rs  n.rs  o.rs  p.rs  r.rs  s.rs  t.rs  u.rs  v.rs  x.rs
crates/houdini_ramen_manager/: Cargo.toml
crates/houdini_ramen_object/: Cargo.toml
crates/houdini_ramen_object/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  l.rs  lib.rs  m.rs  n.rs  p.rs  q.rs  r.rs  s.rs  t.rs  v.rs
crates/houdini_ramen_shop/: Cargo.toml
crates/houdini_ramen_shop/src/: a.rs  c.rs  d.rs  f.rs  g.rs  h.rs  l.rs  m.rs  o.rs  p.rs  r.rs  s.rs  t.rs  v.rs
crates/houdini_ramen_sop/: Cargo.toml
crates/houdini_ramen_sop/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  n.rs  o.rs  p.rs  q.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs  x.rs
crates/houdini_ramen_top/: Cargo.toml
crates/houdini_ramen_top/src/: a.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  l.rs  lib.rs  m.rs  n.rs  o.rs  p.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs  x.rs
crates/houdini_ramen_topnet/: Cargo.toml
crates/houdini_ramen_topnet/src/: lib.rs  r.rs  t.rs
crates/houdini_ramen_vop/: Cargo.toml
crates/houdini_ramen_vop/src/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  n.rs  o.rs  p.rs  q.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs  x.rs
crates/houdini_ramen_vopnet/: Cargo.toml
crates/houdini_ramen_vopnet/src/: c.rs  d.rs  f.rs  i.rs  l.rs  r.rs  s.rs
dev_notes/: design_policy.md  dump_nodes.md  scope_contexts.md
examples/: 001_hello.rs  002_mandelbulb.rs  003_noise_sphere.rs  004_dynamics.rs  01_hello.rs
examples/vex/snippets/: 001_1_yp1.vfl  001_2_set.vfl  002_mandelbulb.vfl  002_point_wrangle.vfl  003_noise_sphere.vfl
resources/: domain_graph.json
resources/docs/: custom_attribute.md  dive_into.md  final_result_display.md  foreach_loop.md  graph_initialization.md  multiparm_parameters.md  operator_paths.md  ramp_parameters.md  sop_sphere.md  spare_parameters.md  vex_injection.md
src/: core.rs  helpers.rs  lib.rs  main.rs
src/core/: context.rs  graph.rs  live_link.rs  py_escape.rs  transpiler.rs  types.rs
src/core/transpiler/: passes.rs  tests.rs
src/core/transpiler/passes/: creation.rs  footer.rs  header.rs  links.rs  parameters.rs  spare_params.rs
src/core/types/: node.rs  param.rs  ramp.rs  spare.rs
src/helpers/: loops.rs
templates/: cargo.toml.j2  macros.j2  node.rs.j2  node.stub.j2
tests/: integration_tests.rs  test_generator.py
tests/fixtures/: expected_loop.py  expected_mandelbulb.py
tools/: compile_context.py  dump_nodes.py  explore_api.py  explore_label.py  format_domain_graph.py  generate_auto_graph.py  generate_rust_api.py  hdefereval.pyi  link_server.py  list_types.py  ramp_interpolation_value.py
tools/probe/: analyze_other_failures.py  analyze_vop_failures.py  explore_api.py  explore_out_label.py  explore_out_label2.py  metadata.py  probe_deep_node.py  probe_inner_node.py  probe_input_labels.py  probe_input_names.py  probe_input_names_strict.py  probe_label.py  probe_vop_contexts.py
vex/include/: hello.h
vex/snippets/: hello.vfl
