[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.0.3"
edition = "2024"
description = "Nodes as Code for Houdini (Under Development)"
license = "MIT"
repository = "https://github.com/unclepomedev/houdini_ramen"
rust-version = "1.94"

[workspace.dependencies]
houdini_ramen_core = { path = "crates/houdini_ramen_core" }

[package]
name = "houdini_ramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
houdini_ramen_core = { workspace = true }
houdini_ramen_chop = { path = "crates/houdini_ramen_chop", optional = true }
houdini_ramen_chopnet = { path = "crates/houdini_ramen_chopnet", optional = true }
houdini_ramen_cop = { path = "crates/houdini_ramen_cop", optional = true }
houdini_ramen_cop2 = { path = "crates/houdini_ramen_cop2", optional = true }
houdini_ramen_copnet = { path = "crates/houdini_ramen_copnet", optional = true }
houdini_ramen_data = { path = "crates/houdini_ramen_data", optional = true }
houdini_ramen_director = { path = "crates/houdini_ramen_director", optional = true }
houdini_ramen_dop = { path = "crates/houdini_ramen_dop", optional = true }
houdini_ramen_driver = { path = "crates/houdini_ramen_driver", optional = true }
houdini_ramen_lop = { path = "crates/houdini_ramen_lop", optional = true }
houdini_ramen_manager = { path = "crates/houdini_ramen_manager", optional = true }
houdini_ramen_object = { path = "crates/houdini_ramen_object", optional = true }
houdini_ramen_shop = { path = "crates/houdini_ramen_shop", optional = true }
houdini_ramen_sop = { path = "crates/houdini_ramen_sop", optional = true }
houdini_ramen_top = { path = "crates/houdini_ramen_top", optional = true }
houdini_ramen_topnet = { path = "crates/houdini_ramen_topnet", optional = true }
houdini_ramen_vop = { path = "crates/houdini_ramen_vop", optional = true }
houdini_ramen_vopnet = { path = "crates/houdini_ramen_vopnet", optional = true }
houdini_ramen_helpers = { path = "crates/houdini_ramen_helpers", optional = true }

[features]
default = [
    "chop", "chopnet", "cop", "cop2", "copnet", "data", "director", "dop", "driver",
    "lop", "manager", "object", "shop", "sop", "top", "topnet", "vop", "vopnet", "helpers"
]

chop = ["dep:houdini_ramen_chop"]
chopnet = ["dep:houdini_ramen_chopnet"]
cop = ["dep:houdini_ramen_cop"]
cop2 = ["dep:houdini_ramen_cop2"]
copnet = ["dep:houdini_ramen_copnet"]
data = ["dep:houdini_ramen_data"]
director = ["dep:houdini_ramen_director"]
dop = ["dep:houdini_ramen_dop"]
driver = ["dep:houdini_ramen_driver"]
lop = ["dep:houdini_ramen_lop"]
manager = ["dep:houdini_ramen_manager"]
object = ["dep:houdini_ramen_object"]
shop = ["dep:houdini_ramen_shop"]
sop = ["dep:houdini_ramen_sop"]
top = ["dep:houdini_ramen_top"]
topnet = ["dep:houdini_ramen_topnet"]
vop = ["dep:houdini_ramen_vop"]
vopnet = ["dep:houdini_ramen_vopnet"]
helpers = ["dep:houdini_ramen_helpers"]
