[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.0.3"
edition = "2024"
description = "Nodes as Code for Houdini (Under Development)"
license = "MIT"
repository = "https://github.com/unclepomedev/houdini_ramen"
rust-version = "1.94"

[workspace.dependencies]
houdini_ramen_core = { path = "crates/houdini_ramen_core" }

[package]
name = "houdini_ramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
houdini_ramen_core = { workspace = true }
houdini_ramen_chop = { path = "crates/houdini_ramen_chop", optional = true }
houdini_ramen_cop2 = { path = "crates/houdini_ramen_cop2", optional = true }
houdini_ramen_dop = { path = "crates/houdini_ramen_dop", optional = true }
houdini_ramen_driver = { path = "crates/houdini_ramen_driver", optional = true }
houdini_ramen_lop = { path = "crates/houdini_ramen_lop", optional = true }
houdini_ramen_object = { path = "crates/houdini_ramen_object", optional = true }
houdini_ramen_sop = { path = "crates/houdini_ramen_sop", optional = true }
houdini_ramen_top = { path = "crates/houdini_ramen_top", optional = true }
houdini_ramen_vop = { path = "crates/houdini_ramen_vop", optional = true }
houdini_ramen_helpers = { path = "crates/houdini_ramen_helpers", optional = true }

[features]
default = [
    "chop", "cop2", "dop", "driver",
    "lop", "object", "sop", "top", "vop", "helpers"
]

chop = ["dep:houdini_ramen_chop"]
cop2 = ["dep:houdini_ramen_cop2"]
dop = ["dep:houdini_ramen_dop"]
driver = ["dep:houdini_ramen_driver"]
lop = ["dep:houdini_ramen_lop"]
object = ["dep:houdini_ramen_object"]
sop = ["dep:houdini_ramen_sop"]
top = ["dep:houdini_ramen_top"]
vop = ["dep:houdini_ramen_vop"]
helpers = ["dep:houdini_ramen_helpers"]
