[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.0.3"
edition = "2024"
description = "Nodes as Code for Houdini (Under Development)"
license = "MIT"
repository = "https://github.com/unclepomedev/houdini_ramen"
rust-version = "1.94"

[workspace.dependencies]
houdini_ramen_core = { version = "0.0.3", path = "crates/houdini_ramen_core" }
houdini_ramen_chop = { version = "0.0.3", path = "crates/houdini_ramen_chop" }
houdini_ramen_cop2 = { version = "0.0.3", path = "crates/houdini_ramen_cop2" }
houdini_ramen_dop = { version = "0.0.3", path = "crates/houdini_ramen_dop" }
houdini_ramen_driver = { version = "0.0.3", path = "crates/houdini_ramen_driver" }
houdini_ramen_lop = { version = "0.0.3", path = "crates/houdini_ramen_lop" }
houdini_ramen_object = { version = "0.0.3", path = "crates/houdini_ramen_object" }
houdini_ramen_sop = { version = "0.0.3", path = "crates/houdini_ramen_sop" }
houdini_ramen_top = { version = "0.0.3", path = "crates/houdini_ramen_top" }
houdini_ramen_vop = { version = "0.0.3", path = "crates/houdini_ramen_vop" }
houdini_ramen_helpers = { version = "0.0.3", path = "crates/houdini_ramen_helpers" }

[package]
name = "houdini_ramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
houdini_ramen_core = { workspace = true }
houdini_ramen_chop = { workspace = true, optional = true }
houdini_ramen_cop2 = { workspace = true, optional = true }
houdini_ramen_dop = { workspace = true, optional = true }
houdini_ramen_driver = { workspace = true, optional = true }
houdini_ramen_lop = { workspace = true, optional = true }
houdini_ramen_object = { workspace = true, optional = true }
houdini_ramen_sop = { workspace = true, optional = true }
houdini_ramen_top = { workspace = true, optional = true }
houdini_ramen_vop = { workspace = true, optional = true }
houdini_ramen_helpers = { workspace = true, optional = true }

[features]
default = [
    "chop", "cop2", "dop", "driver",
    "lop", "object", "sop", "top", "vop", "helpers"
]

chop = ["dep:houdini_ramen_chop"]
cop2 = ["dep:houdini_ramen_cop2"]
dop = ["dep:houdini_ramen_dop"]
driver = ["dep:houdini_ramen_driver"]
lop = ["dep:houdini_ramen_lop"]
object = ["dep:houdini_ramen_object"]
sop = ["dep:houdini_ramen_sop"]
top = ["dep:houdini_ramen_top"]
vop = ["dep:houdini_ramen_vop"]
helpers = ["dep:houdini_ramen_helpers"]
