[project]
name = "houdini-ramen"
version = "0.0.1"
description = "TODO"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "types-houdini>=21.0.512.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "tools"
]
