[package]
name = "houdini_ramen_helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
houdini_ramen_core = { workspace = true }

houdini_ramen_chop = { workspace = true }
houdini_ramen_cop2 = { workspace = true }
houdini_ramen_dop = { workspace = true }
houdini_ramen_driver = { workspace = true }
houdini_ramen_lop = { workspace = true }
houdini_ramen_object = { workspace = true }
houdini_ramen_sop = { workspace = true }
houdini_ramen_top = { workspace = true }
houdini_ramen_vop = { workspace = true }
